plugins {
    id 'java'
}

group 'page.devnet'
version '0.1.0'

targetCompatibility = 11
sourceCompatibility = 11

tasks.withType(JavaCompile) {
    options.encoding = 'UTF-8'
}

allprojects {
    repositories {
        mavenLocal()
        mavenCentral()
        jcenter()
    }
}

ext {
    junitVersion = '5.5.2'
    slf4jVersion = '1.7.25'
    log4jVersion = '2.11.2'
    lombokVersion = '1.18.6'
}